# libidn

./: .clcopying  .gitignore  .gitlab-ci.yml  AUTHORS  COPYING  FAQ  HACKING  Makefile.am  NEWS  README  THANKS  TODO  bootstrap.conf  cfg.mk  configure.ac  libidn.pc.in
contrib/: README  release
contrib/doxygen/: gdoc2doxygen
contrib/idn-python/: test.py
contrib/java/: Makefile.am  README
csharp/: AssemblyInfo.cs  IDNA.cs  IDNAException.cs  Makefile.am  NFKC.cs  Punycode.cs  PunycodeException.cs  Stringprep.cs  StringprepException.cs
csharp/generate/: AssemblyInfo.cs  GenerateNFKC.cs  GenerateRFC3454.cs  HashSet.cs  Program.cs  Tokenizer.cs
doc/: Makefile.am  announce.txt  gdoc  gdoc.mk  libidn.texi
doc/cyclo/: Makefile.am
doc/java/: Makefile.am
doc/reference/: Makefile.am  libidn-docs.xml
doc/tld/: Makefile.am  README  fr.tld  no.tld
examples/: Makefile.am  README  example.c  example2.c  example3.c  example4.c  example5.c
fuzz/: Makefile.am  README.md  fuzzer.h  libidn_stringprep_fuzzer.c  libidn_toascii_fuzzer.c  libidn_tounicode_fuzzer.c  main.c  run-clang.sh
gl/: Makefile.am
gl/m4/: gnulib-cache.m4  gnulib-comp.m4
gl/top/: README-release.diff
gltests/: Makefile.am
java/: Makefile.am
java/src/: Makefile.am
java/src/main/: Makefile.am
java/src/main/java/: Makefile.am
java/src/main/java/gnu/: Makefile.am
java/src/main/java/gnu/inet/: Makefile.am
java/src/main/java/gnu/inet/encoding/: IDNA.java  IDNAException.java  Makefile.am  NFKC.java  Punycode.java  PunycodeException.java  RangeSet.java  Stringprep.java  StringprepException.java
java/src/test/java/: Makefile.am
java/src/test/java/gnu/inet/encoding/: RangeSetTest.java  StringprepTest.java
java/src/test/java/gnu/inet/encoding/caliper/: CaliperStringprep.java
java/src/util/: Makefile.am
java/src/util/java/: GenerateNFKC.java  GenerateRFC3454.java  Makefile.am  TestIDNA.java  TestNFKC.java
lib/: Makefile.am  gen-stringprep-tables.pl  gen-tld-tables.pl  gen-unicode-tables.pl  idn-free.c  idn-free.h  idna.c  idna.h  libidn.map  libidn.pc.in  nfkc.c  pr29.c  pr29.h  profiles.c  punycode.c  punycode.h  strerror-idna.c  strerror-pr29.c  strerror-punycode.c  strerror-stringprep.c  strerror-tld.c  stringprep.c  stringprep.h  tld.c  tld.h  toutf8.c  version.c
lib/gl/: Makefile.am  arg-nonnull.h  attribute.h  c++defs.h  c-ctype.h  c-strcase.h  c-strcasecmp.c  c-strncasecmp.c  gettext.h  iconv.c  iconv.in.h  iconv_close.c  iconv_open-aix.gperf  iconv_open-hpux.gperf  iconv_open-irix.gperf  iconv_open-osf.gperf  iconv_open-solaris.gperf  iconv_open-zos.gperf  iconv_open.c  langinfo.in.h  limits.h  limits.in.h  stdbool.in.h  stddef.in.h  stdint.in.h  striconv.c  striconv.h  string.in.h  sys_types.in.h  unistr.in.h  unitypes.in.h  unused-parameter.h  warn-on-use.h
lib/gl/m4/: gnulib-cache.m4  gnulib-comp.m4
lib/gl/unistr/: u8-check.c  u8-mbtoucr.c  u8-uctomb-aux.c  u8-uctomb.c
lib/gltests/: Makefile.am
libc/: README  example.c  getaddrinfo-idn.txt
m4/: ltoptions.m4  ltsugar.m4  ltversion.m4  lt~obsolete.m4  update-header-version.m4  wint_t.m4
po/: LINGUAS  Makevars  cs.po.in  da.po.in  de.po.in  eo.po.in  es.po.in  fi.po.in  fr.po.in  hr.po.in  hu.po.in  id.po.in  it.po.in  ja.po.in  nl.po.in  pl.po.in  pt_BR.po.in  ro.po.in  sr.po.in  sv.po.in  uk.po.in  vi.po.in  zh_CN.po.in
src/: Makefile.am  idn.c  idn.ggo  idna.el  punycode.el
tests/: Makefile.am  tst_badutf8.c  tst_badutf8nfkc.c  tst_idna.c  tst_idna2.c  tst_idna3.c  tst_idna4.c  tst_nfkc.c  tst_pr29.c  tst_punycode.c  tst_strerror.c  tst_stringprep.c  tst_symbols.c  tst_tld.c  tst_toascii64oob.c  tst_toutf8.c  tst_utf8crash.c  utils.c  utils.h
windows/: libidn4win.mk
windows/include/: ac-stdint.h  config.h  idn-int.h  stdbool.h
